--- a/marketing-project/index.html
+++ b/marketing-project/index.html
@@ -61,7 +61,7 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="../imagens/background 1.png" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="./img/background 1.png" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Fit Medow</h4>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="../imagens/Campina-Grande-Paraiba-shutterstock_1972502687.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="./img/Campina-Grande-Paraiba-shutterstock_1972502687.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Campina Grande</h4>
@@ -101,7 +101,7 @@
         <div class="container py-5">
             <div class="row align-items-cFenter">
                 <div class="col-lg-5">
-                    <img class="img-fluid mb-4 mb-lg-0" src="../imagens/atividade fisica.jpg" alt="">
+                    <img class="img-fluid mb-4 mb-lg-0" src="./img/atividade fisica.jpg" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Sobre nós</h6>
@@ -126,7 +126,7 @@
                 <div class="col-lg-4 mb-3">
                     <div class="product-item mb-2">
                         <div class="product-img">
-                            <img class="img-fluid" src="../imagens/parceiro 3.png" alt="">
+                            <img class="img-fluid" src="./imagens/parceiro 3.png" alt="">
                             <!-- <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong"> -->
                                 <i class="fa fa-2x fa-plus text-white"></i>
                             </a>
@@ -139,7 +139,7 @@
                 <div class="col-lg-4 mb-3">
                     <div class="product-item mb-2">
                         <div class="product-img">
-                            <img class="img-fluid" src="../imagens/parceiro2.png" alt="">
+                            <img class="img-fluid" src="./imagens/parceiro2.png" alt="">
                             <!-- <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong"> -->
                                 <i class="fa fa-2x fa-plus text-white"></i>
                             </a>
@@ -152,7 +152,7 @@
                 <div class="col-lg-4 mb-3">
                     <div class="product-item mb-2">
                         <div class="product-img">
-                            <img class="img-fluid" src="../imagens/parceiro1.png" alt="">
+                            <img class="img-fluid" src="./imagens/parceiro1.png" alt="">
                             <!-- <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong"> -->
                                 <i class="fa fa-2x fa-plus text-white"></i>
                             </a>
@@ -176,38 +176,38 @@
         </div>
         <div class="owl-carousel gallery-carousel">
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="../imagens/korpus.png" alt="">
-                <a class="btn btn-primary" href="../imagens/korpus.png" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="./img/korpus.png" alt="">
+                <a class="btn btn-primary" href="./img/korpus.png" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="../imagens/bluefit.png" alt="">
-                <a class="btn btn-primary" href="../imagens/bluefit.png" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="./img/bluefit.png" alt="">
+                <a class="btn btn-primary" href="./img/bluefit.png" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="../imagens/sesi.png" alt="">
-                <a class="btn btn-primary" href="../imagens/sesi.png" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="./img/sesi.png" alt="">
+                <a class="btn btn-primary" href="./img/sesi.png" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="../imagens/maior.png" alt="">
-                <a class="btn btn-primary" href="../imagens/maior.png" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="./img/maior.png" alt="">
+                <a class="btn btn-primary" href="./img/maior.png" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="../imagens/academia2.jpg" alt="">
-                <a class="btn btn-primary" href="../imagens/academia2.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="./img/academia2.jpg" alt="">
+                <a class="btn btn-primary" href="./img/academia2.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="../imagens/smartfit.jpg" alt="">
-                <a class="btn btn-primary" href="../imagens/smartfit.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="./img/smartfit.jpg" alt="">
+                <a class="btn btn-primary" href="./img/smartfit.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
@@ -239,7 +239,7 @@
                             </div>
                         </div>
                         <div class="col-sm-6 p-0" style="min-height: 300px;">
-                            <img class="position-absolute w-100 h-100" src="../imagens/diniz.jpg" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="./img/diniz.jpg" style="object-fit: cover;">
                         </div>
                     </div>
                 </div>
@@ -248,7 +248,7 @@
                 <div class="col-lg-6 p-0">
                     <div class="row m-0">
                         <div class="col-sm-6 p-0" style="min-height: 300px;">
-                            <img class="position-absolute w-100 h-100" src="../imagens/maria joaquina.webp" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="./img/maria joaquina.webp" style="object-fit: cover;">
                         </div>
                         <div class="col-sm-6 p-0 text-center">
                             <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4">
@@ -281,7 +281,7 @@
                             </div>
                         </div>
                         <div class="col-sm-6 p-0" style="min-height: 300px;">
-                            <img class="position-absolute w-100 h-100" src="../imagens/homem 3.jpg" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="./img/homem 3.jpg" style="object-fit: cover;">
                         </div>
                     </div>
                 </div>
@@ -290,7 +290,7 @@
                 <div class="col-lg-6 p-0">
                     <div class="row m-0">
                         <div class="col-sm-6 p-0" style="min-height: 300px;">
-                            <img class="position-absolute w-100 h-100" src="../imagens/julieta.jpg" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="./img/julieta.jpg" style="object-fit: cover;">
                         </div>
                         <div class="col-sm-6 p-0 text-center">
                             <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4">
@@ -358,13 +358,13 @@
                 <div class="col-lg-8">
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
-                            <img class="img-fluid mx-auto mb-3" src="../imagens/gil do vigor.webp" style="width: 100px;">
+                            <img class="img-fluid mx-auto mb-3" src="./img/gil do vigor.webp" style="width: 100px;">
                             <p style="font-size: 22px;">Encontrei na FIT MEADOW planos ideiais para mim e minha família. Além disso, consigo parcerias exclusivas em diversas academias no nordeste! </p>
                             <h4>Gil do Vigor</h4>
                             <span>Influencer</span>
                         </div>
                         <div class="text-center">
-                            <img class="img-fluid mx-auto mb-3" src="../imagens/rodrigo hilbert.jpg" style="width: 100px;">
+                            <img class="img-fluid mx-auto mb-3" src="./img/rodrigo hilbert.jpg" style="width: 100px;">
                             <p style="font-size: 22px;">Encontrei os melhores locais para a prática de CROSS FIT. Necessitava otimizar minhas buscas e também encontrar outra rede para publicar novas fotos praticando atividade física</p>
                             <h4>Rodrigo Hilbert</h4>
                             <span>Ator</span>
